--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -34,7 +34,13 @@ jobs:
         port: ${{ secrets.VPS_PORT || 22 }}
         script: |
           # Navigate to project directory
-          cd /path/to/your/project
+          cd /root/discourse
+          
+          # Install PM2 if not already installed
+          if ! command -v pm2 &> /dev/null; then
+            echo "Installing PM2..."
+            npm install -g pm2
+          fi
           
           # Pull latest changes
           git pull origin main
@@ -47,8 +53,10 @@ jobs:
           
           # Show PM2 status
           pm2 status
-        
           
+          # Show recent logs
+          pm2 logs discours --lines 20
+
     - name: Verify deployment
       uses: appleboy/ssh-action@v1.0.3
       with:
@@ -60,11 +68,13 @@ jobs:
           # Check if server is running
           pm2 status discours
           
+          # Check server health
+          curl -f http://localhost:3000/api/health || echo "Server not responding"
           
           # Show system resources
-          pm2 run stop
+          pm2 monit --no-daemon &
           sleep 5
-          pm2 run start
+          pkill -f "pm2 monit"
 
 
   deploy-shared-hosting:
