--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -49,13 +49,13 @@ jobs:
           npm ci --production
           
           # Restart server using PM2
-          pm2 restart discours || pm2 start server.js --name discours
+          pm2 restart discourse-app || pm2 start server.js --name discourse-app
           
           # Show PM2 status
           pm2 status
           
-          # Show recent logs
-          pm2 logs discours --lines 20
+          # Show recent logs (non-tailing)
+          pm2 logs discourse-app --lines 20 --nostream
 
     - name: Verify deployment
       uses: appleboy/ssh-action@v1.0.3
@@ -66,7 +66,7 @@ jobs:
         port: ${{ secrets.VPS_PORT || 22 }}
         script: |
           # Check if server is running
-          pm2 status discours
+          pm2 status discourse-app
           
           # Check server health
           curl -f http://localhost:3000/api/health || echo "Server not responding"
